--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,18 @@
+spring:
+  datasource:
+    url: jdbc:h2:./warehouse;DB_CLOSE_ON_EXIT=TRUE
+    username: sa
+  jpa:
+    hibernate:
+      ddl-auto:  update
+    show-sql: false
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
 server:
-  port: 8081
+  port: 8080
 
 
