--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,21 @@
-#spring:
-#  datasource:
-#    url: jdbc:h2:./warehouse;DB_CLOSE_ON_EXIT=TRUE
-#    username: sa
-#  jpa:
-#    hibernate:
-#      ddl-auto:  update
-#    show-sql: false
-#
-#  h2:
-#    console:
-#      enabled: true
-#      path: /h2-console
-#
-#server:
-#  port: 8080
-#
-#
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/warehouse
+    username: admin
+    password: admin
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    database: postgresql
+
+flyway:
+  baselineOnMigrate: true
+  user: "admin"
+  password: "admin"
+  url: jdbc:postgresql://localhost:5432/warehouse
+
+
+server:
+  port: 8080
+
